[workspace]
members = [
  "cti_constants",
  "cti_types",
  "cti_env",
  "cti_schema",
  "cti_assets",
  "cti_core",
  "cti_core_runner",
  "cti_server",
  "cti_refresher",
  "cti_migrate",
]

[workspace.package]
version = "0.1.0"
description = "Capture The IP"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/asaaki/capture-the-ip"
repository = "https://github.com/asaaki/capture-the-ip"
documentation = "https://github.com/asaaki/capture-the-ip"
edition = "2021"
publish = false

[workspace.dependencies]
axum = { version = "0.6.20", features = ["headers", "http2", "macros", "ws"] }
chrono = "0.4.26"
color-eyre = "0.6.2"
concat-idents = "1.1.5"
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
deadpool-diesel = { version = "0.4.1", features = [] }
deadpool-sync = "0.1.0"
diesel = { version = "2.1.0", features = ["chrono", "postgres"] }
diesel-async = { version = "0.3.2", features = ["deadpool", "postgres"] }
fakedata_generator = "0.3.0"
forwarded-header-value = "0.1.1"
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["http1", "http2", "runtime", "server", "stream", "tcp"] }
indexmap = { version = "2.0.0", features = ["std"] }
indoc = "2.0.3"
log = "0.4.20"
mime_guess = "2.0.4"
once_cell = "1.18.0"
rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "adaptive_thread_cache"] }
rustls = "0.21.6"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_with = { version = "3.3.0", features = ["chrono"] }
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-graceful-shutdown = "0.13.0"
tokio-postgres = "0.7.9"
tokio-postgres-rustls = "0.10.0"
tower = { version = "0.4.13", features = ["full", "tokio", "tokio-stream"] }
tower-default-headers = "0.1.1"
tower-http = { version = "0.4.3", features = ["full", "async-compression"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
url = "2.4.0"
urlencoding = "2.1.3"
webpki-roots = "0.25.2"
tower-helmet = "0.2.1"

# workspace internal deps
cti_constants = { path = "cti_constants" }
cti_core_runner = { path = "cti_core_runner" }
cti_types = { path = "cti_types" }
cti_env = { path = "cti_env" }
cti_schema = { path = "cti_schema" }
cti_assets = { path = "cti_assets" }

# https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true
strip = true
rpath = true

[profile.dev.package."*"]
opt-level = 3
