[workspace]
resolver = "2"
members = [
  "cti_constants",
  "cti_types",
  "cti_env",
  "cti_schema",
  "cti_assets",
  "cti_core",
  "cti_core_runner",
  "cti_server",
  "cti_refresher",
  "cti_migrate",
]

[workspace.package]
version = "0.1.0"
description = "Capture The IP"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/asaaki/capture-the-ip"
repository = "https://github.com/asaaki/capture-the-ip"
documentation = "https://github.com/asaaki/capture-the-ip"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = { version = "1.0.75" }
axum = { version = "0.6.20", features = ["headers", "http2", "macros", "ws"] }
axum-prometheus = "0.4.0"
color-eyre = { version = "0.6.2", default-features = false }
concat-idents = "1.1.5"
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
deadpool-diesel = { version = "0.4.1", features = [] }
deadpool-sync = "0.1.0"
diesel = { version = "2.1.1", features = ["postgres", "time"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
fakedata_generator = "0.3.0"
futures = "0.3.28"
indoc = "2.0.3"
itertools = "0.11.0"
log = "0.4.20"
mime_guess = "2.0.4"
parking_lot = { version = "0.12.1", features = [] }
rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "adaptive_thread_cache"] }
rustls = "0.21.7"
serde = { version = "1.0.188", features = ["derive"] }
time = { version = "0.3.28", features = ["serde", "formatting"] }
tokio = { version = "1.32.0", features = [] }
tokio-graceful-shutdown = "0.13.0"
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.10.0"
tower = { version = "0.4.13", features = ["full", "tokio", "tokio-stream"] }
tower-default-headers = "0.1.1"
tower-helmet = "0.2.1"
tower-http = { version = "0.4.4", features = ["full", "async-compression"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
url = "2.4.1"
urlencoding = "2.1.3"
webpki-roots = "0.25.2"

# workspace internal deps
cti_constants = { path = "cti_constants" }
cti_core_runner = { path = "cti_core_runner" }
cti_types = { path = "cti_types" }
cti_env = { path = "cti_env" }
cti_schema = { path = "cti_schema" }
cti_assets = { path = "cti_assets" }

# https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true
strip = true
rpath = true

[profile.dev.package."*"]
opt-level = 3
