[package]
name = "cti_assets"
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rust-embed = { version = "6.8.1", features = [
  # "compression", # https://github.com/pyrossh/rust-embed#compression
  "interpolate-folder-path",
] }
