[package]
name = "cti_assets"
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# https://github.com/pyrossh/rust-embed
rust-embed = { version = "8.2.0" }

[lints]
workspace = true
