[package]
name = "cti_core"
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["dylib"]

[features]
default = []

[dependencies]
cti_constants = { path = "../cti_constants" }
cti_types = { path = "../cti_types" }
cti_env = { path = "../cti_env" }
cti_schema = { path = "../cti_schema" }
cti_assets = { path = "../cti_assets" }

axum = { version = "0.6.18", features = ["headers", "http2", "macros", "ws"] }
chrono = "0.4.26"
color-eyre = "0.6.2"
concat-idents = "1.1.5"
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
deadpool-diesel = { version = "0.4.1", features = [] }
deadpool-sync = "0.1.0"
diesel = { version = "2.1.0", features = ["chrono"] }
diesel-async = { version = "0.3.1", features = ["deadpool", "postgres"] }
fakedata_generator = "0.3.0"
forwarded-header-value = "0.1.1"
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["http1", "http2", "runtime", "server", "stream", "tcp"] }
indexmap = { version = "2.0.0", features = ["std"] }
indoc = "2.0.2"
log = "0.4.19"
mime_guess = "2.0.4"
once_cell = "1.18.0"
rustls = "0.21.2"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_with = { version = "3.0.0", features = ["chrono"] }
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tokio-graceful-shutdown = "0.13.0"
tokio-postgres = "0.7.8"
tokio-postgres-rustls = "0.10.0"
tower = { version = "0.4.13", features = ["full", "tokio", "tokio-stream"] }
tower-default-headers = "0.1.1"
tower-http = { version = "0.4.1", features = ["full", "async-compression"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
url = "2.4.0"
urlencoding = "2.1.2"
webpki-roots = "0.23.1"
tower-helmet = "0.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.26.2"
privdrop = "0.5.4"
