[package]
name = "cti_core"
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["dylib"]

[features]
default = []

[dependencies]
cti_constants.workspace = true
cti_types.workspace = true
cti_env.workspace = true
cti_schema.workspace = true
cti_assets.workspace = true

axum.workspace = true
chrono.workspace = true
color-eyre.workspace = true
concat-idents.workspace = true
deadpool.workspace = true
deadpool-diesel.workspace = true
deadpool-sync.workspace = true
diesel.workspace = true
diesel-async.workspace = true
fakedata_generator.workspace = true
forwarded-header-value.workspace = true
futures.workspace = true
hyper.workspace = true
indexmap.workspace = true
indoc.workspace = true
log.workspace = true
mime_guess.workspace = true
once_cell.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls.workspace = true
tower.workspace = true
tower-default-headers.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
urlencoding.workspace = true
webpki-roots.workspace = true
tower-helmet.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.26.2"
privdrop = "0.5.4"
