[package]
name = "cti_core_runner"
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
cti_types = { path = "../cti_types" }
rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "adaptive_thread_cache"] }
