[package]
name = "cti_core_runner"
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
cti_types.workspace = true
rpmalloc.workspace = true

[lints]
workspace = true
