[package]
name = "cti_env"
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
biodome = "0.2.1"
cti_constants.workspace = true

[lints]
workspace = true
