[package]
name = "cti_migrate"
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
cti_types.workspace = true
cti_env.workspace = true
diesel.workspace = true
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
rpmalloc.workspace = true
