[package]
name = "cti_types"
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true

[lints]
workspace = true
